// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectField should render \`Disabled\` state 1`] = `
<div>
  <div
    class="form-field-row"
  >
    <label
      class="form-label disabled"
      for="disabled-field"
    >
      Disabled
    </label>
    <div
      class="form-field disabled medium"
    >
      <select
        class="form-input"
        disabled=""
        id="disabled-field"
      >
        <option
          value="option_1"
        >
          Option 1
        </option>
        <option
          value="option_2"
        >
          Option 2
        </option>
        <option
          value="option_3"
        >
          Option 3
        </option>
        <option
          value="option_4"
        >
          Option 4
        </option>
        <option
          value="option_5"
        >
          Option 5
        </option>
      </select>
      <span
        class="form-icon select-icon"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`SelectField should render \`Error\` state 1`] = `
<div>
  <div
    class="form-field-row"
  >
    <label
      class="form-label error"
      for="error-field"
    >
      Error
    </label>
    <div
      class="form-field error medium"
    >
      <select
        class="form-input"
        id="error-field"
      >
        <option
          value="option_1"
        >
          Option 1
        </option>
        <option
          value="option_2"
        >
          Option 2
        </option>
        <option
          value="option_3"
        >
          Option 3
        </option>
        <option
          value="option_4"
        >
          Option 4
        </option>
        <option
          value="option_5"
        >
          Option 5
        </option>
      </select>
      <span
        class="form-icon"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 256 256"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M205.66,194.34a8,8,0,0,1-11.32,11.32L128,139.31,61.66,205.66a8,8,0,0,1-11.32-11.32L116.69,128,50.34,61.66A8,8,0,0,1,61.66,50.34L128,116.69l66.34-66.35a8,8,0,0,1,11.32,11.32L139.31,128Z"
          />
        </svg>
      </span>
      <span
        class="form-icon select-icon"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`SelectField should render \`Small\` size 1`] = `
<div>
  <div
    class="form-field-row"
  >
    <label
      class="form-label"
      for="small-field"
    >
      Small
    </label>
    <div
      class="form-field small"
    >
      <select
        class="form-input"
        id="small-field"
      >
        <option
          value="option_1"
        >
          Option 1
        </option>
        <option
          value="option_2"
        >
          Option 2
        </option>
        <option
          value="option_3"
        >
          Option 3
        </option>
        <option
          value="option_4"
        >
          Option 4
        </option>
        <option
          value="option_5"
        >
          Option 5
        </option>
      </select>
      <span
        class="form-icon select-icon"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`SelectField should render \`Success\` state with \`Large\` size 1`] = `
<div>
  <div
    class="form-field-row"
  >
    <label
      class="form-label success"
      for="success-field"
    >
      Success
    </label>
    <div
      class="form-field success medium"
    >
      <select
        class="form-input"
        id="success-field"
      >
        <option
          value="option_1"
        >
          Option 1
        </option>
        <option
          value="option_2"
        >
          Option 2
        </option>
        <option
          value="option_3"
        >
          Option 3
        </option>
        <option
          value="option_4"
        >
          Option 4
        </option>
        <option
          value="option_5"
        >
          Option 5
        </option>
      </select>
      <span
        class="form-icon"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 256 256"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M229.66,77.66l-128,128a8,8,0,0,1-11.32,0l-56-56a8,8,0,0,1,11.32-11.32L96,188.69,218.34,66.34a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </span>
      <span
        class="form-icon select-icon"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
